--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "node-sass": "^9.0.0",
+    "overlayscrollbars": "^2.2.0",
+    "overlayscrollbars-react": "^0.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
+    "save": "^2.9.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
